force-app/main/default/objects/Activity/fields/AI_Call_Log__c.field-meta.xml
<CustomField>
    <fullName>AI_Call_Log__c</fullName>
    <label>AI Call Log</label>
    <description></description>
    <type>Lookup</type>
    <referenceTo>AI_Call_Log__c</referenceTo>
    <relationshipName>Tasks</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>