force-app/main/default/objects/Activity/fields/AI_Generated__c.field-meta.xml
<CustomField>
    <fullName>AI_Generated__c</fullName>
    <label>AI Generated</label>
    <description>Task was suggested by CommunityOS AI and accepted by staff.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>