force-app/main/default/objects/Activity/fields/AI_Reason__c.field-meta.xml
<CustomField>
    <fullName>AI_Reason__c</fullName>
    <label>AI Reason</label>
    <description>Why the AI suggested this task.</description>
    <type>TextArea</type>
</CustomField>